[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/player.png" type="Texture" id=2]
[ext_resource path="res://player/state_machine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://player/states/Idle.gd" type="Script" id=4]
[ext_resource path="res://player/states/Run.gd" type="Script" id=5]
[ext_resource path="res://player/states/Jump.gd" type="Script" id=6]
[ext_resource path="res://player/states/Fall.gd" type="Script" id=7]
[ext_resource path="res://player/states/WallSlide.gd" type="Script" id=8]
[ext_resource path="res://player/states/WallJump.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="WallSlide" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="WallJump" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="WallRaycasts" type="Node2D" parent="."]

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2DUp" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -4, -1 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RayCast2DDown" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -4, 7 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2DUp" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 4, -1 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="RayCast2DDown" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 4, 7 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="Timers" type="Node" parent="."]

[node name="WallSlideCooldown" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="WallJumpCooldown" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="Timers"]
